--- a/astrotest.ipynb
+++ b/astrotest.ipynb
@@ -2,22 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Dependencies\n",
     "import requests\n",
     "import json\n",
     "import pandas as pd\n",
     "from datetime import date\n",
     "import csv\n",
     "import random\n",
-    "from scipy import stats"
+    "from scipy import stats\n",
+    "import time"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -102,19 +104,20 @@
        "'Cancer'"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#test your sign (running this cell should output your zodiac sign. If this is not the case, start over and try again.)\n",
+    "\n",
     "sign.title()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +137,7 @@
        " 'scorpio']"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,38 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['sagittarius',\n",
-       " 'capricorn',\n",
-       " 'aquarius',\n",
-       " 'pisces',\n",
-       " 'aries',\n",
-       " 'taurus',\n",
-       " 'gemini',\n",
-       " 'cancer',\n",
-       " 'leo',\n",
-       " 'virgo',\n",
-       " 'libra',\n",
-       " 'scorpio']"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "zodiaclist"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -226,32 +198,32 @@
      "text": [
       "CHOICE NUMBER 1\n",
       "----------------\n",
-      "MOOD: Thoughtful\n",
-      "Reading: Your thinking is far clearer than usual -- even if you still feel confused! It's a great time to write things down and order your thoughts in a way that helps you feel more confident about the future.\n",
+      "MOOD: Leading\n",
+      "Reading: A stroke of genius hits you, probably quite early, and you feel inspired to get to work right away. It's a good time for you to get others to sign on for your big project -- they want to be part of it!\n",
       "\n",
       "\n",
       "CHOICE NUMBER 2\n",
       "----------------\n",
-      "MOOD: Successful\n",
-      "Reading: You've got some serious thinking to do today, but it shouldn't take nearly as long as you had thought it might. The left side of your brain is operating at a higher frequency, so things just click for you.\n",
+      "MOOD: Thoughtful\n",
+      "Reading: Your thinking is far clearer than usual -- even if you still feel confused! It's a great time to write things down and order your thoughts in a way that helps you feel more confident about the future.\n",
       "\n",
       "\n",
       "CHOICE NUMBER 3\n",
+      "----------------\n",
+      "MOOD: Busy\n",
+      "Reading: You need a personal assistance or someone else to sweat the details -- you've got too much going on! In fact, you need to shift your focus to the big picture as soon as you possibly can.\n",
+      "\n",
+      "\n",
+      "CHOICE NUMBER 4\n",
       "----------------\n",
       "MOOD: Patient\n",
       "Reading: This is not the time to sign anything -- you need to pull back and inspect the deal more thoroughly first, Even if it all looks good, put off any final agreements until tomorrow or even later.\n",
       "\n",
       "\n",
-      "CHOICE NUMBER 4\n",
-      "----------------\n",
-      "MOOD: Leading\n",
-      "Reading: A stroke of genius hits you, probably quite early, and you feel inspired to get to work right away. It's a good time for you to get others to sign on for your big project -- they want to be part of it!\n",
-      "\n",
-      "\n",
       "CHOICE NUMBER 5\n",
       "----------------\n",
-      "MOOD: Accomplished\n",
-      "Reading: That big brain of yours is working perfectly today, so power through some chewy ideas or big plans and make with the thrills! Your people are sure to be amazed at what you come up with this time.\n",
+      "MOOD: Responsible\n",
+      "Reading: One more thing lands in your lap early today, and that might be the one that makes you wonder why you bother. Don't give up -- but do take time out to regroup and confront all your projects with a fresh approach.\n",
       "\n",
       "\n"
      ]
@@ -289,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -298,7 +270,7 @@
      "text": [
       "Sorry! Today you picked the incorrect astrology sign.\n",
       "Your Real Sign: Cancer \n",
-      "Your Guess: Gemini\n"
+      "Your Guess: Aquarius\n"
      ]
     }
    ],
@@ -335,26 +307,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[datetime.date(2021, 7, 3), 'cancer', 'gemini', False, 0]"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "datapoint"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -362,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,26 +325,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "          Date True Sign   Your Guess  You Right?  binary_rightness\n",
-      "0   2021-07-03    cancer  sagittarius       False                 0\n",
-      "1   2021-08-03    cancer  sagittarius       False                 1\n",
-      "2   2021-09-03    cancer          leo       False                 1\n",
-      "3   2021-10-03    cancer          leo       False                 0\n",
-      "4   2021-11-03    cancer  sagittarius       False                 1\n",
-      "5   2021-12-03    cancer  sagittarius       False                 1\n",
-      "6   2021-13-03    cancer          leo       False                 1\n",
-      "7   2021-14-03    cancer          leo       False                 1\n",
-      "8   2021-15-03    cancer  sagittarius       False                 0\n",
-      "9   2021-16-03    cancer  sagittarius       False                 1\n",
-      "10  2021-17-03    cancer          leo       False                 1\n",
-      "11  2021-18-03    cancer          leo       False                 0\n"
+      "         Date True Sign Your Guess  You Right?  binary_rightness\n",
+      "0  2021-07-03    cancer   aquarius       False                 0\n",
+      "1  2021-07-03    cancer   aquarius       False                 0\n",
+      "2  2021-07-03    cancer      virgo       False                 0\n",
+      "3  2021-07-03    cancer      virgo       False                 0\n",
+      "4  2021-07-03    cancer   aquarius       False                 0\n",
+      "5  2021-07-03    cancer   aquarius       False                 0\n",
+      "6  2021-07-03    cancer   aquarius       False                 0\n"
      ]
     }
    ],
@@ -404,16 +351,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 87,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Have you been cheating? There is more than one entry in here for the same date! Not to worry. I'll just delete those other tries for you.\n"
+     ]
+    }
+   ],
    "source": [
     "cleandf=pd.DataFrame(columns = [\"Date\",\"True Sign\",\"Your Guess\",\"You Right?\",\"binary_rightness\"])\n",
     "#No cheating! First, we must erase every attempt you made on the same date except for your first try :) .\n",
     "uniquedates=data[\"Date\"].unique()\n",
     "for item in uniquedates:\n",
     "    firsttry=data[data.Date == item].head(1)\n",
-    "    cleandf=cleandf.append(firsttry)\n"
+    "    cleandf=cleandf.append(firsttry)\n",
+    "if len(uniquedates)<len(data):\n",
+    "    print(\"Have you been cheating? There is more than one entry in here for the same date! Not to worry. I'll just delete those other tries for you.\")\n"
    ]
   },
   {
@@ -588,24 +545,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "You guessed correctly 66.66666666666666% of the time. If your guesses were only as good as random chance, you would be right approximately 20% of the time.\n",
+      "You guessed correctly 0.0% of the time. If your guesses were only as good as random chance, you would be right approximately 20% of the time.\n",
       "You took this test on 12 different days. For maximally rigorous results, you must take this test on at least 30 different days.\n",
-      "The probability that your guesses are only as good as random chance is 0.013653498103543724.\n",
-      "So far, your guesses are were more accurate than random chance! Congratulations!\n",
-      "However, you have only completed this test on 12 days so far. You must complete it at on at least 30 different days for it to be conclusive.\n",
+      "The probability that your guesses are only as good as random chance is 0.007291046572942858.\n",
+      "Your guesses are significantly different from random chance, but... oops! You guessed worse than random chance would predict! You were less likely to identify the correct horoscope for yourself with the help of these descriptions than you would have been with your eyes closed!\n",
       "RESULT: INCONCLUSIVE. Test must be taken on 18 more days.\n"
      ]
     }
    ],
    "source": [
-    "pvalue=stats.ttest_1samp(binary_list,0.25)[1]\n",
+    "pvalue=stats.ttest_1samp(binary_list,0.20)[1]\n",
     "N=len(binary_list)\n",
     "percent = cleandf[\"binary_rightness\"].mean() *100\n",
     "result=f\"INCONCLUSIVE. Test must be taken on {30 - N} more days.\"\n",
@@ -632,6 +588,13 @@
     "\n",
     "print(f\"RESULT: {result}\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
